--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@bigcommerce/big-design": "^0.30.2",
     "@bigcommerce/big-design-theme": "^0.13.1",
+    "axios": "^0.24.0",
     "firebase": "^8.2.6",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
